feat: add domine tab

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -7,5 +7,6 @@
 @import "header.scss";
 @import 'general.scss';
 @import 'secondaries.scss';
-@import 'psychic.scss';
 @import 'mystic.scss';
+@import 'domine.scss';
+@import 'psychic.scss';
