--- a/src/templates/actor-sheet.hbs
+++ b/src/templates/actor-sheet.hbs
@@ -31,7 +31,7 @@
     </div>
 
     <div class="tab domine" data-group="primary" data-tab="domine">
-      {{> "systems/animabf/templates/parts/domine.html"}}
+      {{> "systems/animabf/templates/parts/domine/domine.hbs"}}
     </div>
 
     <div class="tab psychics" data-group="primary" data-tab="psychic">
