--- a/src/templates/parts/header/parts/armor.hbs
+++ b/src/templates/parts/header/parts/armor.hbs
@@ -48,9 +48,9 @@
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
         class="electric"
-        title=(localize "anima.ui.armor.at.electric.title")
-        inputName=(concat "data.combat.armor.at.electric.value")
-        inputValue=data.combat.armor.at.electric.value
+        title=(localize "anima.ui.armor.at.electricity.title")
+        inputName=(concat "data.combat.armor.at.electricity.value")
+        inputValue=data.combat.armor.at.electricity.value
       }}
       {{>
       "systems/animabf/templates/parts/common/vertical-titled-input.hbs"
