--- a/src/templates/parts/psychic/parts/psychic-powers.hbs
+++ b/src/templates/parts/psychic/parts/psychic-powers.hbs
@@ -43,7 +43,7 @@
                   type='text'
                   class='input'
                   disabled
-                  value='{{math '(' @index '+1)*20'}}'
+                  value='{{getDifficultyFromIndex @index}}'
                 />
                 <input
                   type='text'
