WIP: Combat tab

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -7,6 +7,7 @@
 @import "header.scss";
 @import 'general.scss';
 @import 'secondaries.scss';
+@import 'combat.scss';
 @import 'mystic.scss';
 @import 'domine.scss';
 @import 'psychic.scss';
