--- a/src/templates/actor-sheet.hbs
+++ b/src/templates/actor-sheet.hbs
@@ -23,7 +23,7 @@
     </div>
 
     <div class="tab combat" data-group="primary" data-tab="combat">
-      {{> "systems/animabf/templates/parts/combat.html"}}
+      {{> "systems/animabf/templates/parts/combat/combat.hbs"}}
     </div>
 
     <div class="tab mystic" data-group="primary" data-tab="mystic">
